--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
           - id: goods-service
             uri: http://localhost:8081/
             predicates:
-              - Path=/goods-service/**
+              - Path=/goods/**
 #          - id: example-service
 #            uri: http://localhost:9002/
 #            predicates:
