--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8000
+  port: 8080
   servlet:
     context-path: /v1/users
     encoding:
@@ -13,6 +13,10 @@ spring:
     active: default
   config:
     import: "optional:configserver:http://localhost:8888"
+  datasource:
+    url: jdbc:postgresql://localhost:5432/mydb
+    username: postgres
+    password: ${POSTGRES_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
@@ -24,6 +28,9 @@ spring:
   web:
     resources:
       add-mappings: false
+  redis:
+    host: localhost
+    port: 6379
 
 jwt:
   key: ${JWT_SECRET_KEY}
