--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	// security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
+
 	// jwt
 	implementation "io.jsonwebtoken:jjwt-api:0.11.5"
 	runtimeOnly "io.jsonwebtoken:jjwt-gson:0.11.5", "io.jsonwebtoken:jjwt-impl:0.11.5"
