--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
 	testImplementation 'org.assertj:assertj-core:3.23.1'
+	testRuntimeOnly 'com.h2database:h2'
 }
 
 dependencyManagement {
