--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,17 +4,57 @@ server:
 spring:
   application:
     name: gateway-service
-
   cloud:
     gateway:
-      mvc:
-        routes:
-          - id: goods-service
-            uri: lb://GOODS-SERVICE
-            predicates:
-              - Path=/goods/**
-            filters:
-              - StripPrefix=1
+      routes:
+        - id: goods-service
+          uri: lb://GOODS-SERVICE
+          predicates:
+            - Path=/goods/**
+          filters:
+            - StripPrefix=1
+
+        # auth routing
+        - id: bid-service
+          uri: lb://BID-SERVICE
+          predicates:
+            - Method=POST
+            - Path=/bid/bids/**
+          filters:
+            - StripPrefix=1
+            - JwtAuthenticationFilter
+
+        # no auth routing
+        - id: bid-service
+          uri: lb://BID-SERVICE
+          predicates:
+            - Method=GET
+            - Path=/bid/bids/**
+          filters:
+            - StripPrefix=1
+
+        # auth routing
+        - id: member-service
+          uri: lb://MEMBER-SERVICE
+          predicates:
+            - Method=GET
+            - Path=/member/v1/users
+          filters:
+            - StripPrefix=1
+            - JwtAuthenticationFilter
+
+        # no auth routing
+        - id: member-service
+          uri: lb://MEMBER-SERVICE
+          predicates:
+            - Method=POST
+            - Path=/member/v1/users/login, /member/v1/users/**
+          filters:
+            - StripPrefix=1
+
+
+
+
 #          - id: example-service
 #            uri: http://localhost:9002/
 #            predicates:
@@ -26,3 +66,8 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+
+jwt:
+  key: ${JWT_SECRET_KEY}
+
