--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,13 +14,19 @@ spring:
   config:
     import: "optional:configserver:http://localhost:8888"
   jpa:
+    database: mysql
     hibernate:
       ddl-auto: update
-    show-sql: true
     properties:
       hibernate:
+        show_sql: true
         format_sql: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+#        dialect: org.hibernate.dialect.PostgreSQLDialect
+  datasource:
+    url: jdbc:mysql://localhost:3306/mydb
+    username: root
+    password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
   web:
     resources:
       add-mappings: false
