--- a/build.gradle
+++ b/build.gradle
@@ -27,13 +27,14 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-//	// security
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
-//	testImplementation 'org.springframework.security:spring-security-test'
-
 	// jwt
 	implementation "io.jsonwebtoken:jjwt-api:0.11.5"
 	runtimeOnly "io.jsonwebtoken:jjwt-gson:0.11.5", "io.jsonwebtoken:jjwt-impl:0.11.5"
+
+	//swagger
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webflux-ui', version: '2.2.0'
+
+
 
 
 
