--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,6 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
 
-
     //swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
@@ -45,6 +44,9 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    //feign client
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
     //test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
