--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   profiles:
     active: default
   config:
-    import: "optional:configserver:http://localhost:8888"
+    import: optional:configserver:${CONFIG_SERVER_URL}
   jpa:
     database: mysql
     hibernate:
@@ -31,8 +31,9 @@ spring:
     resources:
       add-mappings: false
   redis:
-    host: localhost
-    port: 6379
+    host: ${REDIS_HOST}
+    port: ${REDIS_PORT}
+    password: "${REDIS_PASSWORD}"
 
 jwt:
   key: ${JWT_SECRET_KEY}
@@ -51,4 +52,4 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: ${EUREKA_SERVER_URL}/eureka/
