--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,8 +69,9 @@ jwt:
   key: ${JWT_SECRET_KEY}
 
 springdoc:
-  swagger-ui:
-    use-root-path: true
+  swagger-ui:  
+    enabled: true
+    path: /v1/swagger-ui.html
     urls[0]:
       name: 회원 서비스
       url: http://localhost:8000/v1/users-n/swagger/api-docs
