Chore: 스í웨거 설정 도메인으로  수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -74,13 +74,13 @@ springdoc:
     path: /v1/swagger-ui.html
     urls[0]:
       name: 회원 서비스
-      url: http://localhost:8000/v1/users-n/swagger/api-docs
+      url: http://goodsgoodsduck.shop/api/v1/users-n/swagger/api-docs
     urls[2]:
       name: 굿즈 서비스
-      url: http://localhost:8000/v1/goods-n/swagger/api-docs
+      url: http://goodsgoodsduck.shop/api/v1/goods-n/swagger/api-docs
     urls[1]:
       name: 경매 서비스
-      url: http://localhost:8000/v1/bids-n/swagger/api-docs
+      url: http://goodsgoodsduck.shop/api/v1/bids-n/swagger/api-docs
 
 
 
