Chore: actuator 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -82,8 +82,8 @@ springdoc:
       name: 경매 서비스
       url: http://goodsgoodsduck.shop/api/v1/bids-n/swagger/api-docs
 
-
-
-
-
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: *
