--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,7 +71,7 @@ jwt:
 springdoc:
   swagger-ui:  
     enabled: true
-    path: /swagger-ui.html
+    path: /api/v1/swagger-ui.html
     urls[0]:
       name: 회원 서비스
       url: http://goodsgoodsduck.shop/api/v1/users-n/swagger/api-docs
