--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,9 +69,11 @@ jwt:
   key: ${JWT_SECRET_KEY}
 
 springdoc:
+  api-docs:
+    path: /api/v3/api-docs
   swagger-ui:
     enabled: true
-    path: /api/swagger/swagger-ui.html
+    path: /api/swagger-ui.html
 #    urls[0]:
 #      name: 회원 서비스
 #      url: http://goodsgoodsduck.shop/api/v1/users-n/swagger/api-docs
