--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,6 +56,13 @@ spring:
             - Path=/api/v1/users-n/**
           filters:
 
+        # auth no auth routing
+        - id: auth-service
+          uri: lb://AUTH-SERVICE
+          predicates:
+            - Path=/api/v1/auth-n/**
+          filters:
+
 
 eureka:
   client:
@@ -75,11 +82,14 @@ springdoc:
     enabled: true
     path: /api/swagger-ui.html
     urls[0]:
+      name: 인증 서비스
+      url: http://3.35.70.208:8000/api/v1/auth-n/swagger/api-docs
+    urls[1]:
       name: 회원 서비스
       url: http://3.35.70.208:8000/api/v1/users-n/swagger/api-docs
-    urls[1]:
+    urls[2]:
       name: 굿즈 서비스
       url: http://3.35.70.208:8000/api/v1/goods-n/swagger/api-docs
-    urls[2]:
+    urls[3]:
       name: 경매 서비스
       url: http://3.35.70.208:8000/api/v1/bids-n/swagger/api-docs
