--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ out/
 ### VS Code ###
 .vscode/
 
-firebase/certification.json
+src/main/resources/firebase/certification.json
 .DS_Store
 ._.DS_Store
 **/.DS_Store
