Update: application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,6 +63,21 @@ spring:
             - Path=/api/v1/auth-n/**
           filters:
 
+        # aggregation no auth routing
+        - id: aggregation-service
+          uri: lb://AGGREGATION-SERVICE
+          predicates:
+            - Path=/api/v1/aggregation-n/**
+          filters:
+
+        # aggregation no auth routing
+        - id: aggregation-service
+          uri: lb://AGGREGATION-SERVICE
+          predicates:
+            - Path=/api/v1/aggregation/**
+          filters:
+            - JwtAuthenticationFilter
+
 
 eureka:
   client:
@@ -93,3 +108,6 @@ springdoc:
     urls[3]:
       name: 경매 서비스
       url: http://3.35.70.208:8000/api/v1/bids-n/swagger/api-docs
+    urls[4]:
+      name: 집계 서비스
+      url: http://3.35.70.208:8000/api/v1/aggregation-n/swagger/api-docs
