Update: application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -78,11 +78,26 @@ spring:
             - Path=/api/v1/aggregation-n/**
           filters:
 
-        # aggregation no auth routing
+        # aggregation auth routing
         - id: aggregation-service
           uri: lb://AGGREGATION-SERVICE
           predicates:
             - Path=/api/v1/aggregation/**
+          filters:
+            - JwtAuthenticationFilter
+
+        # etc no auth routing
+        - id: aggregation-service
+          uri: lb://AGGREGATION-SERVICE
+          predicates:
+            - Path=/api/v1/etc-n/**
+          filters:
+
+        # etc auth routing
+        - id: aggregation-service
+          uri: lb://AGGREGATION-SERVICE
+          predicates:
+            - Path=/api/v1/etc/**
           filters:
             - JwtAuthenticationFilter
 
@@ -119,3 +134,6 @@ springdoc:
     urls[4]:
       name: 집계 서비스
       url: http://3.35.70.208:8000/api/v1/aggregation-n/swagger/api-docs
+    urls[5]:
+      name: 기타 등등 서비스
+      url: http://3.35.70.208:8000/api/v1/etc-n/swagger/api-docs
