--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: goods-service
+    name: bid-service
   profiles:
     active: default
   config:
@@ -8,8 +8,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-#      naming:
-#        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategy
     show-sql: true
     properties:
       hibernate:
