--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: bid-service
+    name: goods-service
   profiles:
     active: default
   config:
@@ -8,6 +8,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+#      naming:
+#        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategy
     show-sql: true
     properties:
       hibernate:
