Chore: swagger 주석 처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,8 +24,8 @@ eureka:
     service-url:
       defaultZone: ${EUREKA_SERVER_URL}/eureka/
 
-springdoc:
-  api-docs:
-    path: /api/v1/aggregation-n/swagger/api-docs
-  swagger-ui:
+#springdoc:
+#  api-docs:
+#    path: /api/v1/aggregation-n/swagger/api-docs
+#  swagger-ui:
 #    path: /swagger-ui/index.html
