--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-server:
-  port: 9003
-
 spring:
   application:
     name: notification-service
@@ -16,6 +13,14 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/goodsdb
+    platform: postgres
+    username: moon
+    password: 1234
 
 eureka:
   client:
