Feat: 해goods 입ì°경매 시작 및 마감 시간에  event 발행

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     //feign client
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
+    //kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+
     //test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'com.h2database:h2'
