--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,11 @@ spring:
   web:
     resources:
       add-mappings: false
+  kafka:
+    bootstrap-servers: 3.35.70.208:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
 eureka:
   client:
