Feat: 카프카 컨슈머컨피그 작업 진행 중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
   web:
     resources:
       add-mappings: false
+  kafka:
+    bootstrap-server: ${KAFKA_SERVER_URL}
+    consumer:
+      group-id: ${GROUP_ID}
 
 eureka:
   client:
