Feat: 카프카 프로듀서컨피그 설정 진행중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,13 +17,7 @@ spring:
     resources:
       add-mappings: false
   kafka:
-    bootstrap-servers: localhost:9092
-    consumer:
-      group-id: my-group
-      auto-offset-reset: earliest
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    bootstrap-server: ${KAFKA_SERVER_URL}
 
 eureka:
   client:
