--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,16 +15,9 @@ spring:
         cors-configurations:
           '[/**]':
             allowedOrigins:
-              - '*'
+              - "http://localhost:3000"
             allow-credentials: true
             allowedHeaders:
-              - x-requested-with
-              - Authorization
-              - content-type
-              - credential
-              - X-AUTH-TOKEN
-              - X-CSRF-TOKEN  # 허용할 요청 헤더를 설정
-            exposedHeaders:
               - x-requested-with
               - Authorization
               - content-type
@@ -36,7 +29,7 @@ spring:
               - GET
               - POST
               - DELETE
-              - OPTIONS
+              - DELETE
       routes:
         # goods auth routing
         - id: goods-service
