Chore: allowedMethod에 OPTIONS 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ spring:
               - GET
               - POST
               - DELETE
+              - OPTIONS
       routes:
         # goods auth routing
         - id: goods-service
