--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     //feign client
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    //implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
     //kafka
     implementation 'org.springframework.kafka:spring-kafka'
