--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,7 @@ spring:
               - PUT
               - GET
               - POST
+              - PATCH
               - DELETE
               - OPTIONS
       routes:
