Update: PATCH 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ spring:
               - PUT
               - GET
               - POST
+              - PATCH
               - DELETE
               - OPTIONS
       routes:
